<resources>
    <string name="app_name" translatable="false">Medicalog</string>
    <string name="statistics">Statistics</string>
    <string name="net_income">Net Income</string>
    <string name="expenses">Expenses</string>
    <string name="title_chart_expenses">Expenses by month</string>
    <string name="title_chart_net_income">Net Income by month</string>
    <string name="expenses_by_category">Expenses by category</string>
    <string name="utilities">Utilities</string>
    <string name="rent">Rent</string>
    <string name="repair">Repair</string>
    <string name="insurance">Insurance</string>
    <string name="wages">Wages</string>
    <string name="taxes">Taxes</string>
    <string name="supplies">Supplies</string>
    <string name="other">Other</string>
    <string name="years_old_abbreviation">y.o</string>

    <string name="title_age_range">"Age range: %1$d to %2$d y.o "</string>
    <string name="month_year_dialog_value" translatable="false">%1$s %2$s</string>
    <string name="select_category">Select a category :</string>

    <string name="save">save</string>
    <string name="modify">modify</string>
    <string name="add_patient">Add patient</string>
    <string name="modification">Modification</string>
    <string name="moroccan_currency" translatable="false">DH</string>
    <string name="moroccan_currency_with_number" translatable="false">%1$d DH</string>
    <string name="moroccan_currency_with_letters" translatable="false">%1$s dirhams</string>
    <string name="patients">Patients</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="patient_profile_transition_name" translatable="false">patient profile</string>
    <string name="patients_list_item_transition_name" translatable="false">patient item :%1$d</string>
    <string name="new_patient_form_transition_name" translatable="false">patient form</string>
    <string name="fab_add_patient_transition_name" translatable="false">add patient fab</string>

    <string name="fab_add_session_transition_name" translatable="false">add session fab</string>
    <string name="chart_no_data_message">\'Sorry, not enough data to display\'</string>

    <string name="statistics_spending_percentage">You spent %1$d%% of your income</string>
    <string name="statistics_spending_all">You spent all of your income</string>
    <string name="statistics_spending_nothing">No spending</string>


    <string name="reset">reset</string>
    <string name="profile">Profile</string>
    <string name="done_sessions">Done sessions</string>
    <string name="amount_paid">Amount paid</string>
    <string name="quotation">Quotation</string>
    <string name="invoice">Invoice</string>

    <string name="age">Age</string>
    <string name="phone_number">Phone number</string>
    <string name="consultation_date">Consultation date</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="planned_sessions">Planned sessions</string>
    <string name="frequency">Frequency</string>
    <string name="unit_price">Unit price</string>
    <string name="total">Total</string>
    <string name="total_in_letters">Total in letters</string>
    <string name="social_coverage">Social coverage</string>

    <string name="treatment_status_completed">Completed</string>
    <string name="treatment_status_in_progress">In progress</string>

    <string name="history">History</string>
    <string name="for_patient">For</string>
    <string name="date">Date</string>
    <string name="gender">Gender</string>
    <string name="doctor_fullName">Doctor full name</string>
    <string name="treating_doctor">Treating doctor</string>
    <string name="doctor_prefix">Dr.</string>
    <string name="doctor_prefix_with_text">Dr. %1$s</string>
    <string name="sessions_suffix">sessions</string>

    <string name="time">Time</string>

    <string name="add_session">Add session</string>

    <!--    <string name="long_text_test">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>-->
    <string name="expenses_of">Expenses Of :</string>
    <string name="hint_expenditure_amount">Enter amount here</string>

    <string name="statistics_empty_state_message">For the selected month : \'%1$s\', no statistics are available.</string>
    <string name="statistics_empty_state_tagline">No data available</string>
    <string name="statistics_loading_message">Retrieving your financial data…</string>

    <string name="helper_date_selection">Click the icon to select date</string>
    <string name="helper_time_selection">Click the icon to select time</string>
    <string name="helper_date_range_selection">Click the icon to select date range</string>
    <string name="helper_session_amount_payed">Optional if the payment is delayed or paid in advance</string>

    <string name="form_error_no_special_char">Special characters are not permitted</string>
    <string name="form_error_field_required">Required field</string>
    <string name="form_error_toast">Check your inputs</string>
    <string name="form_helper_optional">Optional</string>
    <string name="form_error_age">Invalid age</string>

    <string name="form_patient_add">New patient added successfully</string>
    <string name="form_patient_modify">Data modified successfully</string>
    <string name="form_loading_patient_info">Loading patient data…</string>
    <string name="form_validating_patient_info">Validating data…</string>
    <string name="form_persisting_patient_info">Saving data…</string>

    <string name="patients_list_empty_state_message">Try adjusting your filters or start adding patients.</string>
    <string name="patients_list_empty_state_tagline">No results found</string>
    <string name="patients_list_loading_message">Loading patients list…</string>

    <string name="patients_filter_results_count_loading">Counting results…</string>
    <string name="patients_filter_no_criteria">Showing all patients</string>

    <string name="new_expense_add">New expense added successfully</string>
    <string name="new_session_add">New session added successfully</string>
    <string name="patient_session_deletion">Session deleted successfully</string>

    <string name="patient_history_empty_state_tagline">No sessions found</string>
    <string name="patient_history_empty_state_message">You can see a patient\'s history by adding their done sessions.</string>


    <string name="dialog_time_picker_title">Select time</string>
    <string name="dialog_month_picker_title">Select month</string>
    <string name="dialog_month_year_picker_title">Select month and year</string>
    <string name="dialog_date_picker_title">Select date</string>
    <string name="dialog_date_range_picker_title">Select date range</string>

    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="dialog_deletion_confirmation_title">Confirm deletion</string>
    <string name="dialog_deletion_confirmation_message">Are you sure you want to delete this session ?</string>

    <string name="dialog_invoice_confirmation_title">Confirm Invoice generation</string>
    <string name="dialog_invoice_confirmation_message">Generating an invoice for this patient will mark their treatment as complete. Are you sure you want to proceed?</string>

    <string name="dialog_sort_title">Sort by</string>
    <string name="recently_added">Recently added</string>

    <string name="expense_history_deletion">Expense deleted successfully</string>

    <string name="expenses_history_empty_state_tagline">No expenses</string>
    <string name="expenses_history_empty_state_message">Start adding expenses to see their history.</string>
    <string name="expenses_history_loading_message">Loading expenses history…</string>


    <string name="dialog_confirm">confirm</string>
    <string name="dialog_ok">ok</string>
    <string name="dialog_cancel">cancel</string>
    <string name="treatment_status">Treatment status :</string>
    <string name="diagnosis_double_points">Diagnosis :</string>
    <string name="last_session">Last session :</string>
    <string name="consultation_date_range">Consultation date range</string>
    <string name="personal_info">Personal information</string>
    <string name="medical_info">Medical information</string>
    <string name="treatment_plan">Treatment plan</string>
    <string name="payment_info">Payment information</string>
    <string name="at">At</string>
    <string name="paid">Paid :</string>

    <plurals name="patients_filter_results_count">
        <item quantity="one">Found results : %1$d patient</item>
        <item quantity="other">Found results : %1$d patients</item>
    </plurals>

    <plurals name="done_sessions_field">
        <item quantity="one">%1$d session</item>
        <item quantity="other">%1$d sessions</item>
    </plurals>

    <plurals name="years_old_with_number">
        <item quantity="one">%1$d year old</item>
        <item quantity="other">%1$d years old</item>
    </plurals>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>