<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="@string/new_session_transition_name"
    >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/padding_32dp"
            tools:context=".session.NewSessionFragment">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_close"
                app:title="@string/add_session" />

            <TextView
                android:id="@+id/text_title_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_72dp"
                android:text="@string/date"
                android:textAppearance="?attr/textAppearanceHeadline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_date"
                style="@style/Widget.clinicManagement.TextInputLayout.OutlinedBox.BottomSheet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                app:hintEnabled="false"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_calendar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_title_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_field_date"
                    android:hint="@string/helper_date_selection"
                    android:textAlignment="center"
                    android:enabled="false"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColorHint="@color/color_primary_70"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_title_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/time"
                android:textAppearance="?attr/textAppearanceHeadline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_layout_date" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_time"
                style="@style/Widget.clinicManagement.TextInputLayout.OutlinedBox.BottomSheet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                app:hintEnabled="false"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_watch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_title_time" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_field_time"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:enabled="false"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColorHint="@color/color_primary_70"
                    android:hint="@string/helper_time_selection"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:id="@+id/text_title_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/amount"
                android:textAppearance="?attr/textAppearanceHeadline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_layout_time" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_amount"
                style="@style/Widget.clinicManagement.TextInputLayout.OutlinedBox.BottomSheet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                app:hintEnabled="false"
                app:suffixText="@string/moroccan_currency"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_title_amount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_field_amount"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColorHint="@color/color_primary_70"
                    android:hint="@string/hint_session_amount"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:text="@string/save"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_layout_amount" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView></layout>