<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".patientProfile.PatientProfileFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:focusableInTouchMode="true"
            android:theme="@style/ThemeOverlay.ClinicManagement.BlueSky"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="Form" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/padding_16dp"
                tools:context=".PatientForm.PatientFormFragment">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_first_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:hint="@string/first_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/ic_user_filled">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_last_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:hint="@string/last_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_first_name"
                    app:startIconDrawable="@drawable/ic_user_filled">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:hint="@string/age"
                    app:layout_constraintEnd_toStartOf="@id/layout_gender"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_last_name"
                    app:suffixText="@string/years_old_abbreviation">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_age"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_gender"
                    style="@style/Widget.clinicManagement.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:hint="@string/gender"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/layout_age"
                    app:layout_constraintTop_toBottomOf="@id/layout_last_name">

                    <AutoCompleteTextView
                        android:id="@+id/dropdown_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:hint="@string/phone_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_age"
                    app:startIconDrawable="@drawable/ic_phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_consultation_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:hint="@string/consultation_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_phone_number"
                    app:startIconDrawable="@drawable/ic_calendar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_consultation_date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="date" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_doctor_fullName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:hint="@string/doctor_fullName"
                    app:prefixText="@string/doctor_short"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_consultation_date"
                    app:startIconDrawable="@drawable/ic_user_filled">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_doctor_fullName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_diagnostic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:hint="@string/diagnostic"
                    app:counterEnabled="true"
                    app:counterMaxLength="100"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_doctor_fullName"
                    app:startIconDrawable="@drawable/ic_diagnostic">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_diagnostic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:inputType="textMultiLine|textCapSentences"
                        android:lines="4"
                        android:maxLength="101"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_frequency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:hint="@string/frequency"
                    app:counterEnabled="true"
                    app:counterMaxLength="80"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_diagnostic">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_frequency"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textCapSentences"
                        android:maxLength="81" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_session_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:hint="@string/session_count"
                    app:suffixText="@string/sessions"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_frequency">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_session_count"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_session_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:hint="@string/session_price"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_session_count"
                    app:startIconDrawable="@drawable/ic_money"
                    app:suffixText="@string/moroccan_currency">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_session_price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_total"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:hint="@string/total"
                    app:suffixText="@string/moroccan_currency"
                    android:enabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_session_price"
                  >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_total"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                         />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_total_in_letters"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:hint="@string/total_in_letters"
                    app:counterEnabled="true"
                    app:counterMaxLength="90"
                    app:suffixText="@string/moroccan_currency_plural"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_total"
                  >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_total_in_letters"
                        android:gravity="top"
                        android:inputType="textMultiLine|textCapSentences"
                        android:lines="4"
                        android:maxLength="91"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                       />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_social_coverage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:hint="@string/social_coverage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_total_in_letters"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_social_coverage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    app:layout_constraintTop_toBottomOf="@+id/layout_social_coverage"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</layout>